--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+* {
+    color: white;
+}
+
 body {
-    background-color: burlywood;
+    background-color: #4d4d4d;
 }
 
 .justify-content{
@@ -35,12 +39,15 @@ ul {
 }
 
 li {
-    padding: 1%;
+    padding: 0.72%;
 }
 
 a {
-    color: black;
     text-decoration: none;
+}
+
+.float-right {
+    float: right;
 }
 
 a:hover {
