--- a/js/jsIndex.css
+++ b/js/jsIndex.css
@@ -1,4 +1,9 @@
 header {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 15%;
     width: 100%;
 }
@@ -32,4 +37,10 @@ footer {
     align-items: center;
     width: 70%;
     height: 60%;
+}
+
+.resize {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
